Add documentation and use the last Cherry runtime concept