@@ -1,10 +1,12 @@
 package io.camunda.connector.officetopdf;
 
+import io.camunda.connector.cherrytemplate.CherryOutput;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-public class OfficeToPdfOutput {
+public class OfficeToPdfOutput implements CherryOutput {
 
   public static final String OUTPUT_PDF_FILE_VARIABLE = "pdfFileVariable";
   String pdfFileVariable;
@@ -21,10 +23,10 @@ public class OfficeToPdfOutput {
   /**
    * this method is exploded by Cherry Runtime to produce a nice element-template
    *
-   * @return list of parameter
+   * @return list of parameters
    */
   public List<Map<String, Object>> getOutputParameters() {
-    return Arrays.asList(Map.of("name", OfficeToPdfOutput.OUTPUT_PDF_FILE_VARIABLE, // name
+    return List.of(Map.of("name", OfficeToPdfOutput.OUTPUT_PDF_FILE_VARIABLE, // name
         "label", "Destination file", // label
         "class", Object.class, // class
         "level", "REQUIRED", // level
